# beat-age

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
ckpts/: README.md
configs/: paths.example.env
results/: README.md
scripts/: create_ukb_development_splits.py  extract_beat_age_sequence_features.py  mimic_beat_age_external_validation.py  predict_ukb_clinical.py  prepare_survival_dataset.py  prepare_ukb_clinical_beats.py  saliency_mapping.py  serial_ecg_trajectory_analysis.py  survival_cox_splines.py  train_beat_age_model.py
src/beat_age/: __init__.py  datasets.py  models.py  segmentation.py
