[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beat-age"
version = "0.1.0"
description = "Code for Beat-age ECG biological age prediction and survival analyses."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
